--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
         <h2 class="form-signin-heading">Flukebox Administration</h2>
         <input type="text" class="input-block-level" name="email" placeholder="Email address">
         <input type="password" class="input-block-level" name="password" placeholder="Password">
-        <button class="btn btn-large btn-primary" type="submit">Sign in</button>
+        <button class="btn btn-large btn-primary" name= "signin" type="submit">Sign in</button>
       </form>
 
     </div> <!-- /container -->
